--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.7",
+    "axios": "^0.20.0",
+    "firebase": "^7.21.1",
+    "formik": "^2.1.5",
+    "mobx": "^6.0.0",
+    "mobx-react": "^6.3.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "react-yup": "^1.18.0",
+    "typescript": "~3.7.2",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
